## Process this file with automake to produce Makefile.in

MYAPPNAME=exalt
SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.h.in~ config.sub configure \
							  install-sh \
                       ltconfig ltmain.sh missing mkinstalldirs depcomp \
                       stamp-h stamp-h.in \
                       $(MYAPPNAME).c \
                       debian/changelog


EXTRA_DIST = README \
AUTHORS \
COPYING \
COPYING-PLAIN

