# get rid of that stupid cache mechanism
rm -f config.cache

AC_INIT(configure.in)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_ISC_POSIX
AM_INIT_AUTOMAKE(exalt, 0.5)
AM_CONFIG_HEADER(config.h)

AC_C_BIGENDIAN
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST
AM_ENABLE_SHARED
AM_PROG_LIBTOOL

dnl Add the languages which your application supports here.

if test "x${libdir}" = 'x${exec_prefix}/lib'; then
  if test "x${exec_prefix}" = "xNONE"; then
    if test "x${prefix}" = "xNONE"; then
      libdir="${ac_default_prefix}/lib";
    else
      libdir="${prefix}/lib";
    fi
  else
    if test "x${prefix}" = "xNONE"; then
      libdir="${ac_default_prefix}/lib";
    else
      libdir="${prefix}/lib";
    fi
  fi
fi

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}", [Shared Data Directory])
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}", [Shared Data Directory])
fi

dnl Set PACKAGE_LIB_DIR in config.h.
if test "x${libdir}" = 'xNONE'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_LIB_DIR, "${ac_default_prefix}/lib", [Installation Directory for Libraries])
  else
    AC_DEFINE_UNQUOTED(PACKAGE_LIB_DIR, "${prefix}/lib", [Installation Directory for Libraries])
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_LIB_DIR, "${libdir}", [Installation Directory for Libraries])
fi



dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}", [Source Code Directory])

requirements=""


dnl detecting the linux distribution
dnl C_ARG_WITH(distro, AS_HELP_STRING([--with-distro=DISTRO],[Specify the Linux distribution to target: One of debian, gentoo, archlinux or none]))
if test "z$with_distro" = "z"; then
dnl	 	AC_CHECK_FILE(/etc/SuSE-release,with_distro="suse")
	 	AC_CHECK_FILE(/etc/gentoo-release,with_distro="gentoo")
dnl	 	AC_CHECK_FILE(/etc/arch-release,with_distro="archlinux")
 	 	AC_CHECK_FILE(/etc/debian_version,with_distro="debian")
fi

with_distro=`echo ${with_distro} | tr '[[:upper:]]' '[[:lower:]]' `

if test "z$with_distro" = "z"; then
 	 	AC_MSG_ERROR([Linux distribution autodetection failed, you must specify the distribution to target using --with-distro=DISTRO, set DISTRO to none if your distribution is not supported.])
	 	exit 1
else
	 	case $with_distro in
	 	debian|gentoo|none) dnl|gentoo|archlinux|suse|none)
	 	;;
	 	*)
 	 	AC_MSG_ERROR([Your distribution (${with_distro}) is not yet supported, you will not save your configuration! (patches welcome), you can specify --with-distro=none to skip this check])
	 	;;
esac
fi

if test "x$with_distro" = 'xdebian'; then
 	AC_DEFINE_UNQUOTED(DIST_DEBIAN,"debian", [Debian distribution])
fi
if test "x$with_distro" = 'xgentoo'; then
 	AC_DEFINE_UNQUOTED(DIST_GENTOO,"gentoo", [Gentoo distribution])
fi




PKG_CHECK_MODULES(LIBEXALT, [
		ecore >= 0.9.9.037,
		ecore-config >= 0.9.9.038,
                ehal >= 0.1.0.002
		])

AC_SUBST(requirements)

AC_SUBST(packagesrcdir)


AC_OUTPUT([
Makefile
exalt.pc
src/Makefile
debian/changelog
])

